Additional development of survival analysis XGBoost model

--- a/Clinical_data_preparation.ipynb
+++ b/Clinical_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -102,9 +102,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.302964673037904770968458531097     8\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.370971589400256299984427146600    14\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.233692783386264068613732019177     4\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.533669585389327696272831671548    84\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.998520027522620198855715156108    26\n",
+      "                                                                    ..\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.331190885036488929103895366369    10\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.277480301357743614593810806082    46\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.288316181222587861988787471936    12\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.183569989717899941176027409797    89\n",
+      "1.3.6.1.4.1.14519.5.2.1.9203.8273.186879497093893472606739050801    72\n",
+      "Name: Number of Images, Length: 394, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the metadata CSV file\n",
     "metadata_path = \"L:/Basic/divi/jstoker/slicer_pdac/Master Students WS 24/Martijn/data/Pre-training/dataset/metadata.csv\"\n",
@@ -126,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -186,10 +205,15 @@
          "name": "OSm",
          "rawType": "float64",
          "type": "float"
+        },
+        {
+         "name": "OSSTAT",
+         "rawType": "int64",
+         "type": "integer"
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d00e1956-95a4-422e-b096-ad8d94f93a5f",
+       "ref": "70ed2a2c-e556-4433-8472-27a60a305557",
        "rows": [
         [
          "0",
@@ -199,7 +223,8 @@
          "0",
          "FOLFOX-B",
          "11.40041067761807",
-         "22.40657084188912"
+         "22.40657084188912",
+         "1"
         ],
         [
          "1",
@@ -209,7 +234,8 @@
          "0",
          "FOLFOX-P",
          "7.68788501026694",
-         "48.39425051334702"
+         "48.39425051334702",
+         "1"
         ],
         [
          "2",
@@ -219,7 +245,8 @@
          "0",
          "FOLFOX-B",
          "8.147843942505133",
-         "31.67145790554415"
+         "31.67145790554415",
+         "1"
         ],
         [
          "3",
@@ -229,7 +256,8 @@
          "0",
          "FOLFOX-P",
          "21.88090349075975",
-         "37.35523613963039"
+         "37.35523613963039",
+         "1"
         ],
         [
          "4",
@@ -239,11 +267,12 @@
          "0",
          "FOLFIRI-B",
          "1.609856262833675",
-         "4.435318275154004"
+         "4.435318275154004",
+         "1"
         ]
        ],
        "shape": {
-        "columns": 7,
+        "columns": 8,
         "rows": 5
        }
       },
@@ -273,6 +302,7 @@
        "      <th>treatment</th>\n",
        "      <th>PFSm</th>\n",
        "      <th>OSm</th>\n",
+       "      <th>OSSTAT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -285,6 +315,7 @@
        "      <td>FOLFOX-B</td>\n",
        "      <td>11.400411</td>\n",
        "      <td>22.406571</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -295,6 +326,7 @@
        "      <td>FOLFOX-P</td>\n",
        "      <td>7.687885</td>\n",
        "      <td>48.394251</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -305,6 +337,7 @@
        "      <td>FOLFOX-B</td>\n",
        "      <td>8.147844</td>\n",
        "      <td>31.671458</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -315,6 +348,7 @@
        "      <td>FOLFOX-P</td>\n",
        "      <td>21.880903</td>\n",
        "      <td>37.355236</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -325,33 +359,34 @@
        "      <td>FOLFIRI-B</td>\n",
        "      <td>1.609856</td>\n",
        "      <td>4.435318</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   SubjectKey  KRAS  BRAF  NRAS  treatment       PFSm        OSm\n",
-       "0           1     0     1     0   FOLFOX-B  11.400411  22.406571\n",
-       "1           2     0     0     0   FOLFOX-P   7.687885  48.394251\n",
-       "2           3     1     0     0   FOLFOX-B   8.147844  31.671458\n",
-       "3           4     0     0     0   FOLFOX-P  21.880903  37.355236\n",
-       "4           5     0     0     0  FOLFIRI-B   1.609856   4.435318"
+       "   SubjectKey  KRAS  BRAF  NRAS  treatment       PFSm        OSm  OSSTAT\n",
+       "0           1     0     1     0   FOLFOX-B  11.400411  22.406571       1\n",
+       "1           2     0     0     0   FOLFOX-P   7.687885  48.394251       1\n",
+       "2           3     1     0     0   FOLFOX-B   8.147844  31.671458       1\n",
+       "3           4     0     0     0   FOLFOX-P  21.880903  37.355236       1\n",
+       "4           5     0     0     0  FOLFIRI-B   1.609856   4.435318       1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "relavant_data = all_data[[\"SubjectKey\", \"KRAS\", \"BRAF\", \"NRAS\", \"treatment\", \"PFSm\", \"OSm\"]] #still add path. response \n",
+    "relavant_data = all_data[[\"SubjectKey\", \"KRAS\", \"BRAF\", \"NRAS\", \"treatment\", \"PFSm\", \"OSm\", \"OSSTAT\"]] #still add path. response \n",
     "relavant_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,44 +450,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\1160445548.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_input['treatment_P'] = training_input['treatment'].str.endswith('P').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:20: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\1160445548.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_labels['no_resp'] = (training_labels['TRG_cat'] == 'No histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:21: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\1160445548.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  training_labels['partial_resp'] = (training_labels['TRG_cat'] == 'Partial histological response').astype(int)\n",
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_21320\\642332832.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\1160445548.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  training_labels['major_resp'] = (training_labels['TRG_cat'] == 'Major histological response').astype(int)\n"
+      "  training_labels['major_resp'] = (training_labels['TRG_cat'] == 'Major histological response').astype(int)\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\1160445548.py:36: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_labels['6m_PFS'] = (training_labels['PFSm'] >= half_year_pfs).astype(int)\n"
      ]
     }
    ],
    "source": [
     "# create input csv\n",
     "\n",
-    "training_input = training_data[[\"SubjectKey\", \"KRAS\", \"BRAF\", \"NRAS\", \"treatment\", \"TRG_cat\"]]\n",
+    "training_input = training_data[[\"SubjectKey\", \"KRAS\", \"BRAF\", \"NRAS\", \"treatment\", \"TRG_cat\", \"OSSTAT\"]]\n",
     "training_labels = training_data[[\"SubjectKey\", \"PFSm\", \"OSm\", \"TRG_cat\"]]\n",
     "\n",
     "\n",
@@ -1393,14 +1434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_2144\\2120867684.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\2120867684.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1415,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1475,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "081a056b-8d91-4693-9ea8-07d977c3a649",
+       "ref": "5ee4415e-90d1-4508-9b60-11c0e3b64385",
        "rows": [
         [
          "0",
@@ -1518,7 +1559,7 @@
        "4  51.285421"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,6 +1575,54 @@
    "outputs": [],
    "source": [
     "training_targets_OS.to_csv('training_targets_OS.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\2568016548.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_targets_OS['log_OSm'] = np.log(training_targets_OS['OSm'])\n",
+      "C:\\Users\\P095550\\AppData\\Local\\Temp\\ipykernel_5656\\2568016548.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  training_targets_OS.drop(columns=[\"OSm\"], inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save log survival times\n",
+    "training_targets_OS['log_OSm'] = np.log(training_targets_OS['OSm'])\n",
+    "training_targets_OS.drop(columns=[\"OSm\"], inplace=True)\n",
+    "training_targets_OS.to_csv('training_targets_OS_log.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create occurence labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dataframe\n",
+    "training_targets_OS_occurence = training_data[[\"OSSTAT\"]]\n",
+    "training_targets_OS_occurence.to_csv(\"training_targets_OS_occurence.csv\", index=False)"
    ]
   },
   {
